websites/github.com.css
/* gh-transparency */
html,
body,
header,
.color-bg-default,
.feed-background,
.session-authentication,
.auth-form-body,
[aria-labelledby="folders-and-files"] .bgColor-muted,
nav,
.dxnHPp,
.kcVpNH,
.discussion-timeline-actions,
.TimelineItem-break,
.gh-header,
.PageLayout-pane,
.bSTcOH,
.gOhIYN,
.IssueViewer-module__contentArea__NVsYRb_,
#blob-edit-side-panel-id,
#repository-container-header,
.empty-cell,
.FleZw,
.MarkdownInput-module__textArea--QjIwG,
.notifications-list-item,
.notifications-list-item.notification-read,
.search-results-page,
.application-main > div > div,
#memex-root,
[aria-label="Project"],
#memex-project-view-root > div,
[aria-label="Formatting tools"],
.slicer-items-module__SlicerPanel--nSeK0,
.jyoUVC,
.Box-sc-g0xbh4-0[role="grid"],
[role="row"],
.eqCHeb,
[data-testid="chat-layout"],
aside > div,
[data-testid="chat-layout"] > div > div > div,
[data-testid="chat-layout"] > div > aside,
.ContentPreview-module__tabsContainer--bNywg::after,
.snippet-clipboard-content > .notranslate,
.IssueViewer-module__contentArea--mHr61,
.SubscriptionSection-module__button--WSUPv,
.IssueViewer-module__contentArea--IpMnd,
section[aria-label="Events"] > div > div > [data-timeline-event-id],
.IssueViewer-module__contentArea__ChMIU {
  background-color: transparent !important;
  background: none !important;
  border: none !important;
  box-shadow: none !important;
  transition:
    background-color 0.5s ease-in-out,
    background 0.5s ease-in-out,
    border 0.5s ease-in-out,
    box-shadow 0.5s ease-in-out !important;
}

button[role="tab"] {
  &[aria-selected="true"] {
    border-radius: 0.5em !important;
  }
}

.MarkdownEditor-module__viewSwitchBorder--zeiDB,
.js-comment-container::before,
.js-comment-container .TimelineItem::before {
  display: none !important;
}

[aria-label="Copilot badge"] + div > .js-snippet-clipboard-copy-unpositioned:has(h3) {
  padding: 1em !important;
}

/* gh-transparent lists $ Make the files, issues and other lists transparent */
.PageLayout-content .Box:not(.Popover-message),
.PageLayout-content .Box-row,
#repo-content-turbo-frame .Box.Box:not(.Popover-message) {
  background-color: transparent !important;
  background: none !important;
  border: none !important;
  box-shadow: none !important;
}

/* gh-no footer */
footer:has(h2) {
  opacity: 0 !important;
}

/* gh-hover $ Make the left and right sidebars show on hover */
.feed-left-sidebar,
.feed-right-column {
  opacity: 0 !important;
  transition: all 0.3s ease-in-out !important;
  &:hover {
    opacity: 1 !important;
  }
}

/* gh-border mods */
table,
.eIKYQa,
div.border-bottom,
td {
  border: none !important;
}

.dJnomT,
.jPdcfu,
.gOHzTT,
.eBevHz,
.Box-header,
#repos-sticky-header > div,
.jbBkdO,
.file-header,
.TabNav-item {
  border-radius: 0.5em !important;
}

[data-selector="repos-split-pane-content"] {
  section,
  .NWhVB,
  .cm-gutters,
  [data-testid="codemirror-editor"],
  [data-testid="codemirror-editor"] .cm-content,
  .llKfAj {
    background: none !important;
    box-shadow: none !important;
  }
}

#user-profile-frame .Box,
.mgKNn,
.fGELhp,
.timeline-comment,
.empty-diff-line,
.Diff-module__diffHeaderWrapper--rsdD4::before {
  background: none !important;
  box-shadow: none !important;
}

.feed-item-content,
.color-bg-subtle,
.ajax-pagination-btn,
action-graph .color-bg-inset,
[data-testid="comment-header"] .Box-sc-g0xbh4-0,
.copilotPreview__suggestionButton:not(:hover) {
  background-color: transparent !important;
  background: none !important;
  box-shadow: none !important;
}

/* gh-overlay fixes $ Fix some transparent overlays and menus */
modal-dialog .search-suggestions,
details-dialog.Box,
.Box-sc-g0xbh4-0.gOHzTT.js-notification-shelf-offset-top.color-bg-default,
.Popover-message,
.HeaderMetadata-module__stickyContainer--xk69x {
  background-color: var(--bgColor-inset) !important;
  transition: background-color 0.3s ease-in-out !important;
  border-radius: 1em !important;
}

/* gh-glass effect */
.prc-Button-ButtonBase-c50BI:not(
  [data-variant="primary"],
  .Toolbar-module__group--dOhAD > button[data-component="IconButton"],
  button[data-component="IconButton"].ToolbarButton-module__iconButton--o0jFl
),
.MergeabilityIcon-module__mergeabilityIcon--GOu7M,
.range-editor,
.TableHead.prc-DataTable-TableHead-eOrJU,
.Table.prc-DataTable-Table-qYfrL,
.tabnav-tab.selected,
.TabNav__TabNavLink-sc-pwdi4r-3.selected,
.timeline-comment-header,
.Metadata-module__container--tL6Q3,
.CodeBlock-module__header--RMUQr,
.CodeBlock-module__codeContainer--dAEis,
.ChatMessage-module__actions--Jllb6,
.ContentPreviewTab-module__tabContent--zNIXv:hover,
.cm-gutters,
.cm-editor.ͼ1.ͼ2.ͼ5nc.ͼ5fa.hide-help.js-codemirror-editor,
.FilePreview-module__toolbar--toYCM,
.cm-content,
.FileBlock-module__container--zWu5c,
.ChatMessage-module__content--MYneF,
.Layout-module__previewPane--vF1ZO.Layout-module__active--nDCtU,
.ChatInput-module__container--NFzCy,
#settings-frame .Box,
.form-select,
.edit_user button,
.Box-sc-g0xbh4-0 .gxwXUv,
.Box-sc-g0xbh4-0.fXxPgR,
.Box-sc-62in7e-0.BranchInfoBar-module__Box--NhDLA.BranchInfoBar-module__BranchInfoBarContainer--vaFVP,
#file-tree-filter-field,
.highlight pre,
.ListItem-module__listItem--kHali:hover,
.Box-sc-g0xbh4-0 .gpHFJV,
.Box-row.Box-row--focus-gray.p-0.mt-0.js-navigation-item.js-issue-row.navigation-focus,
.d-flex.flex-column.border.rounded-2.mb-3.pl-1,
.form-group .form-control,
.Box-sc-g0xbh4-0 .erfCwp,
.Box-sc-g0xbh4-0 .eHDvEW,
.Box-sc-g0xbh4-0 .ldkMIO,
.Box-sc-g0xbh4-0 .eWEbRA:hover,
.react-directory-row:hover,
.tabnav-tab[aria-selected="true"],
.snippet-clipboard-content.notranslate.position-relative.overflow-auto,
.Shared-module__CommentBox--x3rre,
.Box-sc-g0xbh4-0 .crArEc,
.copilotPreview,
.MarkdownEditor-module__inputWrapper--MtV0d,
.TextInput-wrapper,
.AppHeader-search-whenRegular,
turbo-frame > article > div.feed-item-content,
#feed-filter-menu summary,
.pagehead-actions button,
.pagehead-actions details summary,
.tabnav-tab:hover,
#fork-button,
.BtnGroup button,
.BtnGroup details summary,
input[value="Follow"],
.Button--secondary,
#dashboard-repos-filter-left,
.react-directory-remove-file-icon button,
#branch-picker-repos-header-ref-selector,
.FilterInputWrapper-module__Box_1--vewob,
.FilterInputWrapper-module__Box_1--vewob button,
.SearchBarActions-module__buttons--N7M2V a,
#\:rbo\:-list-view-container,
table[aria-labelledby="folders-and-files"],
#\:r1a\:-list-view-container,
[aria-label="Issues"][data-issue-and-pr-hovercards-enabled],
#js-issues-search,
.QueryBuilder [data-target="query-builder.styledInput"],
.Box-body,
a[aria-label="Add file"],
button[aria-label="Search this repository"],
[data-testid="issue-body"],
#\:rc\:-list-view-container,
.container:has(#repos-sticky-header),
.UnderlineNav-item:hover,
.TabNav__TabNavLink-sc-pwdi4r-3:hover,
.notifications-list,
.notifications-list-item.notification-unread,
.Box-header,
.Box-sc-g0xbh4-0.iwUbcA,
#type-options summary,
#language-options summary,
#sort-options summary,
.Box-sc-g0xbh4-0.NWhVB,
[data-selector="repos-split-pane-content"] .Box-sc-g0xbh4-0.NWhVB,
.react-issue-comment,
.MergeBox-module__mergePartialContainer--N4i3Z,
.MarkdownEditor-module__previewWrapper--UHhTL,
.FormControl-input,
.btn.btn-block.js-profile-editable-edit-button,
.btn.js-quick-submit-alternative,
#your-repos-filter {
  box-shadow:
    rgba(0, 0, 0, 0.05) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset !important;
  background-color: light-dark(#fff8, #0005) !important;
  border-radius: 0.5em !important;
}

.avatar-upload div.position-absolute {
  box-shadow:
    rgba(0, 0, 0, 0.5) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset !important;
}

.TabNav__TabNavTabList-sc-pwdi4r-1.DvNYj,
.tabnav-tabs.d-flex.overflow-auto,
.fLXEGX {
  gap: 8px !important;
}

.CommentBox-container,
.CommentBox-comment {
  background-color: light-dark(#fff8, #0005) !important;
  border-radius: 0 0 10px 10px !important;
  border: none !important;
  margin: 0px !important;
}

a.rgh-own-conversation,
a.rgh-own-conversation:hover {
  border-radius: 4px 4px 10px;
}

#new_comment_field,
.CommentBox-comment {
  box-shadow: none !important;
}

.tabnav.CommentBox-header {
  border: none !important;
  background-color: light-dark(#fff8, #0005) !important;
}

.timeline-comment-group .timeline-comment {
  box-shadow:
    rgba(0, 0, 0, 0.05) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset !important;
  background-color: light-dark(#fff8, #0005) !important;
  border-radius: 0.5em !important;
}

.row-module__timelineBodyRowContainer--ml7YX {
  padding: 0.5em !important;
}

/* no tab text $ Make repository tabs only got icons and show text only on hover */
nav[aria-label="Repository"] > ul > li > a {
  span[data-component="text"] {
    opacity: 0 !important;
    width: 0em !important;
    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.2) !important;
  }
  &:hover {
    span[data-component="text"] {
      width: 9em !important;
      opacity: 1 !important;
    }
  }
}

.UnderlineNav-item:hover .Counter {
  margin-left: var(--control-medium-gap) !important;
}

.AppHeader-localBar .Counter {
  margin-left: 0px !important;
  transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.2) !important;
}

/* repo sidebar hover $ Revel more info on repository description and below sidebar content on hover */
.Layout-sidebar {
  .BorderGrid-cell {
    .mt-2,
    ul,
    div:not(.hide-sm.hide-md, .flex-items-center, .my-3, .f6) {
      height: 0 !important;
      opacity: 0 !important;
      margin: 0 !important;
      transition: all 0.5s ease-out !important;
    }
  }
  &:hover {
    .BorderGrid-cell {
      .mt-2,
      ul,
      div:not(.hide-sm.hide-md, .flex-items-center, .my-3, .f6) {
        height: 100% !important;
        opacity: 1 !important;
        margin: 0.5em !important;
      }
    }
  }
}

/* immersive search $ Blur and zoom in with search */
.application-main {
  transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.35) !important;
}

body:has(header > .search-expanded) .application-main {
  filter: blur(20px) !important;
  scale: 1.05 !important;
}

/* Hide Separator in toolbar */
.AppHeader .AppHeader-globalBar .AppHeader-actions::before {
  display: none !important;
}

/* better vertical timeline icon bg */
[data-testid="issue-viewer-container"],
#repo-content-turbo-frame {
  .TimelineItem-badge,
  .prc-Timeline-TimelineBadge-BqMiN {
    background-color: light-dark(#fff8, #00000054) !important;
    border: solid var(--borderWidth-thin) #3d444d !important;
  }
}

/* gh-better chip margin */
.OverviewContent-module__Button--MDoYP {
  margin-right: 8px !important;
}
#global-copilot-menu-button {
  margin-left: 8px !important;
}

/* gh-remove borders */
.prc-Button-ButtonBase-c50BI:not(.ReactionButton-module__reactionToggleButtonReacted--TgLue),
.BtnGroup-item,
.Button--secondary,
.TextInput__StyledTextInput-sc-ttxlvl-0,
.Box-sc-62in7e-0.BranchInfoBar-module__Box--NhDLA.BranchInfoBar-module__BranchInfoBarContainer--vaFVP {
  border: none !important;
}

#fork-button,
.BtnGroup-parent {
  margin-right: 3px !important;
}

